# slack-build-summary-bot

./: .gitignore  .travis.yml  Cargo.toml  gocd_cert.pem
src/: build_info_manager.rs  gocd.rs  main.rs  slack.rs  test.rs
