[package]
name = "slack-bot"
version = "0.1.0"
authors = ["Mason Gup <mgup@mdsol.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "^1.0.82"
serde_derive = "^1.0.82"
serde_json = "^1.0.33"
log = "^0.4.6"
log4rs = "^0.8.1"
regex = "^1"
slack_api = "0.21"
time = "0.1"
chrono = ">= 0.4.6"
ring = "*"
hex = ">= 0.3.2"
reqwest = ">= 0.9.5"
http = ">= 0.1.14"

[dependencies.rocket_contrib]
version = "0.4.0"
